--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:h2:file:./db/filmorate;
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+spring.test.database.replace=none
 spring.jpa.defer-datasource-initialization=true
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.context=DEBUG
